--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -119,7 +119,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Engine Core\Scene\Sky.h" />
     <ClInclude Include="Source Files\Engine Core\Settings.h" />
     <ClInclude Include="Source Files\Input\Input.h" />
-    <ClInclude Include="Source Files\Input\InputHelper.h" />
+    <ClInclude Include="Source Files\Input\InputState.h" />
     <ClInclude Include="Source Files\Multithreading\Scheduler.h" />
     <ClInclude Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cuh" />
     <ClInclude Include="Source Files\Physics Engine\PhysicsEngine.h" />
@@ -168,7 +168,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Engine Core\Settings.cpp" />
     <ClCompile Include="Source Files\Engine Core\SoulCore.cpp" />
     <ClCompile Include="Source Files\Input\Input.cpp" />
-    <ClCompile Include="Source Files\Input\InputHelper.cpp" />
+    <ClCompile Include="Source Files\Input\InputState.cpp" />
     <ClCompile Include="Source Files\Multithreading\Scheduler.cpp" />
     <ClCompile Include="Source Files\Physics Engine\PhysicsEngine.cpp" />
     <ClCompile Include="Source Files\Ray Engine\RayEngine.cpp" />
