--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -148,6 +148,9 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Utility\OpenCLIncludes.h" />
     <ClInclude Include="Source Files\Utility\OpenCL\OpenCLHelper.h" />
     <ClInclude Include="Source Files\Utility\GPUUtility.h" />
+    <ClInclude Include="Source Files\Utility\OpenGL\GLError.h" />
+    <ClInclude Include="Source Files\Utility\OpenGL\Shader.h" />
+    <ClInclude Include="Source Files\Utility\OpenGL\ShaderSupport.h" />
     <ClInclude Include="Source Files\Utility\Vulkan\VulkanBackend.h" />
     <ClInclude Include="Source Files\Utility\Vulkan\VulkanUtility.h" />
   </ItemGroup>
@@ -158,6 +161,9 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Display\Window\WindowManager.cpp" />
     <ClCompile Include="Source Files\Engine Core\Allocator\Allocator.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
+    <ClCompile Include="Source Files\Utility\OpenGL\GLError.cpp" />
+    <ClCompile Include="Source Files\Utility\OpenGL\Shader.cpp" />
+    <ClCompile Include="Source Files\Utility\OpenGL\ShaderSupport.cpp" />
     <ClCompile Include="Source Files\Utility\Vulkan\VulkanBackend.cpp" />
     <CudaCompile Include="Source Files\Engine Core\Material\Colour\CUDA\Colour.cu" />
     <CudaCompile Include="Source Files\Engine Core\Material\CUDA\ShaderNode.cu" />
