--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -193,6 +193,9 @@
     <Filter Include="Engine Backend\Display\Window">
       <UniqueIdentifier>{d83e4226-21c4-4d38-a224-ca699c0015b0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine Backend\Utility\OpenGL">
+      <UniqueIdentifier>{e6bdba1e-64cc-47a1-a848-78c13e2f314c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Engine Core\BasicDependencies.h">
@@ -426,6 +429,15 @@
     <ClInclude Include="Source Files\Display\Window\WindowManager.h">
       <Filter>Engine Backend\Display\Window</Filter>
     </ClInclude>
+    <ClInclude Include="Source Files\Utility\OpenGL\ShaderSupport.h">
+      <Filter>Engine Backend\Utility\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Utility\OpenGL\GLError.h">
+      <Filter>Engine Backend\Utility\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Utility\OpenGL\Shader.h">
+      <Filter>Engine Backend\Utility\OpenGL</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Input\Input.cpp">
@@ -490,6 +502,15 @@
     </ClCompile>
     <ClCompile Include="Source Files\Display\Window\WindowManager.cpp">
       <Filter>Engine Backend\Display\Window</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Utility\OpenGL\GLError.cpp">
+      <Filter>Engine Backend\Utility\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Utility\OpenGL\Shader.cpp">
+      <Filter>Engine Backend\Utility\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Utility\OpenGL\ShaderSupport.cpp">
+      <Filter>Engine Backend\Utility\OpenGL</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
