--- a/Soul Engine/PropertySheetDebug.props
+++ b/Soul Engine/PropertySheetDebug.props
@@ -50,7 +50,7 @@
       <NvccCompilation>compile</NvccCompilation>
       <GenerateLineInfo>true</GenerateLineInfo>
       <CudaRuntime>Static</CudaRuntime>
-      <CodeGeneration>compute_50,sm_50;compute_52,sm_52;compute_60,sm_60;compute_61,sm_61</CodeGeneration>
+      <CodeGeneration>compute_50,sm_50;compute_52,sm_52;compute_61,sm_61</CodeGeneration>
       <FastMath>true</FastMath>
       <UseHostInclude>true</UseHostInclude>
       <Optimization>O2</Optimization>
@@ -60,6 +60,7 @@
       <GPUDebugInfo>true</GPUDebugInfo>
       <PtxAsOptionV>false</PtxAsOptionV>
       <Runtime>InheritFromHost</Runtime>
+      <AdditionalOptions>-DTHRUST_DEBUG %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
     <CudaLink>
       <Optimization>O2</Optimization>
@@ -69,6 +70,7 @@
       <GPUDebugInfo>true</GPUDebugInfo>
       <AdditionalDependencies>cudart64_80.lib;cudadevrt.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(CUDA_LIB_PATH)</AdditionalLibraryDirectories>
+      <AdditionalOptions>-DTHRUST_DEBUG %(AdditionalOptions)</AdditionalOptions>
     </CudaLink>
   </ItemDefinitionGroup>
   <ItemGroup />
