--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -143,14 +143,12 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Utility\CUDA\CUDAHelper.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAManaged.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAMath.h" />
+    <ClInclude Include="Source Files\Utility\Devices.h" />
     <ClInclude Include="Source Files\Utility\GLMIncludes.h" />
     <ClInclude Include="Source Files\Utility\Logger.h" />
     <ClInclude Include="Source Files\Utility\OpenCLIncludes.h" />
     <ClInclude Include="Source Files\Utility\OpenCL\OpenCLHelper.h" />
     <ClInclude Include="Source Files\Utility\GPUUtility.h" />
-    <ClInclude Include="Source Files\Utility\OpenGL\GLError.h" />
-    <ClInclude Include="Source Files\Utility\OpenGL\Shader.h" />
-    <ClInclude Include="Source Files\Utility\OpenGL\ShaderSupport.h" />
     <ClInclude Include="Source Files\Utility\Settings.h" />
     <ClInclude Include="Source Files\Utility\Vulkan\VulkanBackend.h" />
     <ClInclude Include="Source Files\Utility\Vulkan\VulkanUtility.h" />
@@ -162,10 +160,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Display\Window\WindowManager.cpp" />
     <ClCompile Include="Source Files\Engine Core\Allocator\Allocator.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
+    <ClCompile Include="Source Files\Utility\Devices.cpp" />
     <ClCompile Include="Source Files\Utility\Logger.cpp" />
-    <ClCompile Include="Source Files\Utility\OpenGL\GLError.cpp" />
-    <ClCompile Include="Source Files\Utility\OpenGL\Shader.cpp" />
-    <ClCompile Include="Source Files\Utility\OpenGL\ShaderSupport.cpp" />
     <ClCompile Include="Source Files\Utility\Settings.cpp" />
     <ClCompile Include="Source Files\Utility\Vulkan\VulkanBackend.cpp" />
     <CudaCompile Include="Source Files\Engine Core\Material\Colour\CUDA\Colour.cu" />
