--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -190,6 +190,9 @@
     <Filter Include="Engine Backend\Display\Window">
       <UniqueIdentifier>{d83e4226-21c4-4d38-a224-ca699c0015b0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine Backend\Utility\Includes">
+      <UniqueIdentifier>{e0129b18-9a19-4e06-b5d7-1d5733558dbb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Engine Core\BasicDependencies.h">
@@ -330,12 +333,6 @@
     <ClInclude Include="Source Files\Utility\CUDAIncludes.h">
       <Filter>Engine Backend\Utility</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Utility\OpenCLIncludes.h">
-      <Filter>Engine Backend\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Files\Utility\GLMIncludes.h">
-      <Filter>Engine Backend\Utility</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Renderer\CUDA\Renderer.cuh">
       <Filter>Engine Backend\Renderer\CUDA</Filter>
     </ClInclude>
@@ -429,6 +426,18 @@
     <ClInclude Include="Source Files\Utility\Devices.h">
       <Filter>Engine Backend\Utility</Filter>
     </ClInclude>
+    <ClInclude Include="Source Files\Utility\Includes\OpenCLIncludes.h">
+      <Filter>Engine Backend\Utility\Includes</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Utility\Includes\GLFWIncludes.h">
+      <Filter>Engine Backend\Utility\Includes</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Utility\Includes\GLMIncludes.h">
+      <Filter>Engine Backend\Utility\Includes</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Display\Window\Window.h">
+      <Filter>Engine Backend\Display\Window</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Input\Input.cpp">
@@ -499,6 +508,9 @@
     </ClCompile>
     <ClCompile Include="Source Files\Utility\Devices.cpp">
       <Filter>Engine Backend\Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Display\Window\Window.cpp">
+      <Filter>Engine Backend\Display\Window</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
