--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -118,11 +118,16 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Engine Core\Scene\OpenCL\CLScene.h" />
     <ClInclude Include="Source Files\Engine Core\Scene\Scene.h" />
     <ClInclude Include="Source Files\Engine Core\Scene\Sky.h" />
+    <ClInclude Include="Source Files\GPUDevices\CUDA\CUDADevices.cuh" />
+    <ClInclude Include="Source Files\GPUDevices\Devices.h" />
     <ClInclude Include="Source Files\Input\Input.h" />
     <ClInclude Include="Source Files\Input\InputState.h" />
     <ClInclude Include="Source Files\Multithreading\Scheduler.h" />
     <ClInclude Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cuh" />
     <ClInclude Include="Source Files\Physics Engine\PhysicsEngine.h" />
+    <ClInclude Include="Source Files\Raster\RasterBackend.h" />
+    <ClInclude Include="Source Files\Raster\Vulkan\VulkanBackend.h" />
+    <ClInclude Include="Source Files\Raster\Vulkan\VulkanUtility.h" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\Ray.cuh" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\RayEngine.cuh" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\RayJob.cuh" />
@@ -139,21 +144,15 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Renderer\Renderer.h" />
     <ClInclude Include="Source Files\Resources\Objects\Hand.h" />
     <ClInclude Include="Source Files\Shaders\Shader.h" />
-    <ClInclude Include="Source Files\Utility\CUDAIncludes.h" />
-    <ClInclude Include="Source Files\Utility\CUDA\CUDADevices.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAHelper.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAManaged.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAMath.h" />
-    <ClInclude Include="Source Files\Utility\Devices.h" />
     <ClInclude Include="Source Files\Utility\Includes\GLFWIncludes.h" />
     <ClInclude Include="Source Files\Utility\Includes\GLMIncludes.h" />
     <ClInclude Include="Source Files\Utility\Includes\OpenCLIncludes.h" />
     <ClInclude Include="Source Files\Utility\Logger.h" />
     <ClInclude Include="Source Files\Utility\OpenCL\OpenCLHelper.h" />
-    <ClInclude Include="Source Files\Utility\GPUUtility.h" />
     <ClInclude Include="Source Files\Utility\Settings.h" />
-    <ClInclude Include="Source Files\Utility\Vulkan\VulkanBackend.h" />
-    <ClInclude Include="Source Files\Utility\Vulkan\VulkanUtility.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Algorithms\Data Algorithms\GPU Quicksort\QuickSort.cpp" />
@@ -163,10 +162,11 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Display\Window\WindowManager.cpp" />
     <ClCompile Include="Source Files\Engine Core\Allocator\Allocator.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
-    <ClCompile Include="Source Files\Utility\Devices.cpp" />
+    <ClCompile Include="Source Files\GPUDevices\Devices.cpp" />
+    <ClCompile Include="Source Files\Raster\RasterBackend.cpp" />
+    <ClCompile Include="Source Files\Raster\Vulkan\VulkanBackend.cpp" />
     <ClCompile Include="Source Files\Utility\Logger.cpp" />
     <ClCompile Include="Source Files\Utility\Settings.cpp" />
-    <ClCompile Include="Source Files\Utility\Vulkan\VulkanBackend.cpp" />
     <CudaCompile Include="Source Files\Engine Core\Material\Colour\CUDA\Colour.cu" />
     <CudaCompile Include="Source Files\Engine Core\Material\CUDA\ShaderNode.cu" />
     <CudaCompile Include="Source Files\Engine Core\Material\Texture\Image.cu">
@@ -201,12 +201,12 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\ObjectSceneAbstraction.cu" />
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\Scene.cu" />
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\Sky.cu" />
+    <CudaCompile Include="Source Files\GPUDevices\CUDA\CUDADevices.cu" />
     <CudaCompile Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\Ray.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayJob.cu" />
     <CudaCompile Include="Source Files\Renderer\CUDA\Renderer.cu" />
-    <CudaCompile Include="Source Files\Utility\CUDA\CUDADevices.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAHelper.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAManaged.cu" />
     <ClCompile Include="Source Files\Utility\OpenCL\OpenCLHelper.cl">
